# realsense_robotraconteur_driver

./: Dockerfile  README.md  client.py  client_pointcloud.py  example.py  opencv_pointcloud_viewer.py  pyproject.toml  realsense.yaml  realsense_client_captureframe.py  realsense_client_capturepointcloud.py  realsense_client_depth.m  realsense_client_image.m  realsense_client_image.py  realsense_service.py  service.py  std_client_image.py  std_client_pointcloud.py  std_service.py  temp.py
config/: realsense_default_config.yml
examples/: realsense_client_captureframe.py  realsense_client_capturepointcloud.py  realsense_client_pointcloud.m  realsense_client_pointcloud.py
robdef/: edu.rpi.robotics.realsense.robdef
src/realsense_robotraconteur_driver/: __main__.py  realsense_robotraconteur_driver.py
