[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "realsense-robotraconteur-driver"
version = "0.2.0"
authors = [
    {name = "Honglu He", email = "hehonglu123@gmail.com"},
    {name ="John Wason", email = "wason@wasontech.com"}
]
description = "Robot Raconteur driver for Intel RealSense cameras"
license = {text = "Apache-2.0"}
requires-python = ">=3.6"
dependencies = [
    "robotraconteur",
    "robotraconteurcompanion",
    "drekar-launch-process",
    "opencv-contrib-python",
    "matplotlib",
    "pyrealsense2"  
]
readme = "README.md"

[project.urls]
homepage = "https://github.com/robotraconteur-contrib/realsense_robotraconteur_driver"
repository = "https://github.com/robotraconteur-contrib/realsense_robotraconteur_driver"

[project.scripts]
realsense-robotraconteur-driver = "realsense_robotraconteur_driver.realsense_robotraconteur_driver:main"

[project.optional-dependencies]
test = [
    "pytest",
]
